# regulaai

./: .gitignore  README.md  grafana_dashboard.json  package-lock.json  package.json  privacy-policy.md  regula.py  rule_validation_tests.py
.github/workflows/: ci.yml  community-rules.yml  compliance.yml
crawler/: Dockerfile.lambda_layer  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  OPENAPI_SDK_GUIDE.md  README.md  alembic.ini  anomaly.py  app.py  audit.py  create_pr.py  dark_pattern.py  generate_policy.py  generate_sdk.py  integrations.py  lambda_handler.py  locustfile.py  models.py  openapi.yaml  personas.json  requirements.txt  rule_engine.py  scan.py  scan_benchmark.py  test_integrations.py  test_openapi.py
crawler/cli/: README.md  __init__.py  main.py  pyproject.toml
crawler/migrations/versions/: 3c09800c3657_add_rbac_schema_users_organisations_.py  4724cfa42642_use_server_default_for_plan_and_.py  5198620ac08e_add_integration_fields_to_organisations.py  (+2 more)
crawler/sdk-ts/: README.md  build.sh  package.json  test-sdk.js
crawler/sdk-ts/src/: index.ts  (+2 more)
crawler/templates/: alert_email.html
crawler/tests/: test_scan.py
dashboard/: README.md  package-lock.json  package.json
e2e/: register_and_scan.spec.ts
helm/regulaai/: Chart.yaml  values.yaml
infrastructure/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  validate.sh  variables.tf
infrastructure/eks-cluster/: main.tf  outputs.tf
policy_templates/: de.md  en.md  fr.md  pt.md
rule_packs/: README.md  ccpa_do_not_sell.json  gdpr_v0.json  schema.json
(+7 files in other folders)
